data/NGS/outOfDate.txt
NGS 过时代码/老版本软件




========================================
过时软件的安装和使用：STAR
----------------------------------------

1. STAR
(1B)[过时]安装star 2.7：https://github.com/alexdobin/STAR
# Get latest STAR source from releases
wget https://github.com/alexdobin/STAR/archive/2.7.0f.tar.gz
tar -xzf 2.7.0f.tar.gz
cd STAR-2.7.0f

#编译 Compile under Linux
cd STAR/source
make STAR

#然后在~/bin下添加快捷方式
$ ln -s /home/wangjl/data/software/STAR-2.7.0f/source/STAR

#查看版本号
$ STAR --version
2.7.0f





(2)最后使用的是(lab上一致的)老版本2.5.2：
https://github.com/alexdobin/STAR/archive/2.5.2b.tar.gz
https://github.com/alexdobin/STAR

find one on the server:
$ find / -name '*STAR*'
/share/apps/genomics/STAR-2.5.2b

use it directly:
$ cd /home/wangjl/bin/
$ ln -s /share/apps/genomics/STAR-2.5.2b/bin/Linux_x86_64/STAR
$ STAR --version
STAR_2.5.2b






========================================
samtools 1.16.1
----------------------------------------

1. [2022.10]CentOS 7.9 重装 samtools 新版本(1.16.1) [过时]

git clone https://github.com/samtools/samtools.git
git clone https://github.com/samtools/htslib.git 

先下载子模块
$ cd htslib
$ git submodule update --init --recursive

$ make #编译库


开始编译主程序
$ cd ../samtools
$ autoheader            # Build config.h.in (this may generate a warning about
                      # AC_CONFIG_SUBDIRS - please ignore it).
$ autoconf -Wno-syntax
$ ./configure prefix=/home/wangjl/
$ make 
$ make install


检查版本号
$ samtools --version
samtools 1.16.1-18-g410d910
Using htslib 1.16-10-g6366029
Copyright (C) 2022 Genome Research Ltd.


2. 功能
按照标签筛选序列，标签在文件中
$ samtools view -D BC:barcodes.txt -o /data_folder/data.barcodes.bam /data_folder/data.bam

http://www.htslib.org/doc/samtools-sort.html










### old part: 

1.安装

(1) 方法1：不一定work...
第一步，从github下载所需版本samtools软件包
https://github.com/samtools/samtools


或
https://sourceforge.net/projects/samtools/files/samtools/1.5/
$ wget https://sourceforge.net/projects/samtools/files/samtools/1.10/samtools-1.10.tar.bz2/download


第二步，解压，此处以目前最新版samtools-1.5为例：
tar -jxf samtools-1.5.tar.bz2
cd samtools-1.5


第三步，编译，安装：
make
make prefix=/opt/biosoft/samtools-1.5 install


第四步，加入环境变量
echo 'export PATH=$PATH:/opt/biosoft/samtools-1.5/bin' >> /etc/profile


现在你已经不需要刚刚下载和解压的软件包了，愉快的删除吧。
cd ../ && rm -rf samtools-1.5 samtools-1.5.tar.bz2



bcftools安装几乎完全一样。需要注意的是，此处我用了root账户。对于普通用户，可以把软件安装在自己有读写权限的目录下，也就是说，要更改prefix=xxx和/etc/profile至你自己的文件目录和文件。
https://samtools.github.io/bcftools/howtos/install.html




(2) 方法2：CentOS 亲测可用
从github获取最新版本的包
git clone https://github.com/samtools/samtools.git
git clone https://github.com/samtools/htslib.git #并列放到同一个文件夹下


1)然后安装hslib
autoheader
autoconf
./configure  #根据提醒，先做 $ git submodule update --init --recursive
make
make prefix=~/ install


make 报错:
cram/cram_encode.c: In function ‘cram_build_ref’:
cram/cram_encode.c:2883:17: error: ‘for’ loop initial declarations are only allowed in C99 mode
                 for (int j = 0; j < cigar[i] >> BAM_CIGAR_SHIFT; j++)
                 ^
cram/cram_encode.c:2883:17: note: use option -std=c99 or -std=gnu99 to compile your code
make: *** [cram/cram_encode.o] Error 1
无解，使用 docker Ubuntu 吧。





2)进入samtools文件夹，执行命令：
autoheader            # Build config.h.in (this may generate a warning about
                      # AC_CONFIG_SUBDIRS - please ignore it).
autoconf -Wno-syntax  # Generate the configure script
./configure           # Needed for choosing optional functionality #如果samtool并列没有HTSlib会报错。
##make
##make install #error install: cannot create regular file ‘/usr/local/bin/samtools’: Permission denied

make prefix=~/ install #或在~/bin建软链接
make install


检查版本号：
$ samtools --version
samtools 1.9-69-gb217a91


========================================
----------------------------------------


========================================
----------------------------------------



========================================
----------------------------------------


========================================
----------------------------------------


========================================
----------------------------------------



========================================
----------------------------------------


========================================
----------------------------------------


========================================
----------------------------------------

